@@ -4,6 +4,13 @@
   <artifactId>SpringRest</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+  	<cucumber.version>1.2.0</cucumber.version>
+	<junit.version>4.11</junit.version>
+	<selenium.version>2.40.0</selenium.version>
+	<start-class>library.App</start-class>
+  </properties>
+  
   <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -43,11 +50,41 @@
 		  </exclusion>
 		</exclusions>
 	</dependency>
+	
+	<dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>${cucumber.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>${cucumber.version}</version>
+      <scope>test</scope>
+     </dependency>
+     <dependency>
+	   <groupId>junit</groupId>
+	   <artifactId>junit</artifactId>
+	   <scope>test</scope>
+     </dependency>
+     <dependency>
+		<groupId>info.cukes</groupId>
+		<artifactId>cucumber-spring</artifactId>
+		<version>${cucumber.version}</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.seleniumhq.selenium</groupId>
+		<artifactId>selenium-server</artifactId>
+		<version>${selenium.version}</version>
+	</dependency>
   </dependencies>
-
-  <properties>
-      <start-class>hello.Application</start-class>
-  </properties>
 
   <build>
   	 <directory>target</directory>
@@ -65,10 +102,21 @@
 		        </compilerArguments>
 			</configuration>
 		</plugin>
-          <plugin>
-              <groupId>org.springframework.boot</groupId>
-              <artifactId>spring-boot-maven-plugin</artifactId>
-          </plugin>
+        <plugin>
+             <groupId>org.springframework.boot</groupId>
+             <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+        <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<configuration>
+				<argLine>-Duser.language=en</argLine>
+				<argLine>-Xmx1024m</argLine>
+				<argLine>-XX:MaxPermSize=256m</argLine>
+				<argLine>-Dfile.encoding=UTF-8</argLine>
+				<useFile>false</useFile>
+			</configuration>
+		</plugin>
       </plugins>
   </build>
 
